[tool.poetry]
name = "blockade-skybox-video"
version = "0.1.0"
description = "Generate videos from skybox images"
authors = ["yunusey <ynsmrycl2007@gmail.com>"]
readme = "README.md"
packages = [{include = "blockade_skybox_video"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
